@@ -3504,24 +3504,53 @@ public class ConfigurationTreeActions
 	TreePath               treePath = tree.getSelectionPath();
 	
 	ConfigurationTreeNode treeNode = (ConfigurationTreeNode)treePath.getLastPathComponent();
-	PrimaryDataset dataset = (PrimaryDataset)treeNode.parent();
-	Stream         stream  = dataset.parentStream();
-	Path           path    = (Path)treeNode.object();
-	int            index   = dataset.indexOfPath(path);
 	
-	dataset.removePath(path);
-	
-	model.nodeRemoved(dataset,index,treeNode);
-	if (model.streamMode().equals("datasets")) {
-	    model.nodeRemoved(model.getChild(stream,stream.indexOfDataset(dataset)), index,treeNode);
-	}
-	
-	if(stream.datasets(path).size() == 0) {
-		// Only if the path goes to unassignedPaths.
-		model.nodeInserted(model.getChild(stream,stream.datasetCount()), stream.listOfUnassignedPaths().indexOf(path));
-	}
+	if(treeNode.parent() instanceof PrimaryDataset) {
+		PrimaryDataset dataset = (PrimaryDataset)treeNode.parent();
+		Stream         stream  = dataset.parentStream();
+		Path           path    = (Path)treeNode.object();
+		int            index   = dataset.indexOfPath(path);
 		
-	
+		dataset.removePath(path);
+		
+		model.nodeRemoved(dataset,index,treeNode);
+		if (model.streamMode().equals("datasets")) {
+		    model.nodeRemoved(model.getChild(stream,stream.indexOfDataset(dataset)), index,treeNode);
+		}
+		
+		if(stream.datasets(path).size() == 0) {
+			// Only if the path goes to unassignedPaths.
+			model.nodeInserted(model.getChild(stream,stream.datasetCount()), stream.listOfUnassignedPaths().indexOf(path));
+		}
+			
+	} else {
+		// Unnasigned path.
+
+		Stream stream = (Stream) ((ConfigurationTreeNode)treeNode.parent()).parent();
+		EventContent content = stream.parentContent();
+	    Path path = (Path) treeNode.object();
+	    int index = stream.listOfUnassignedPaths().indexOf(path);
+	    
+	    stream.removePath(path);
+	    
+	    if (model.contentMode().equals("paths")&&content.indexOfPath(path)<0) {
+		model.nodeRemoved(content,content.indexOfPath(path),path);
+	    }
+	    
+	    Iterator<Stream> itS = content.streamIterator();
+	    while (itS.hasNext()) {
+		OutputModule output = itS.next().outputModule();
+		PSetParameter psetSelectEvents =
+		    (PSetParameter)output.parameter(0);
+		model.nodeChanged(psetSelectEvents.parameter(0));
+		if (output.referenceCount()>0)
+		    model.nodeStructureChanged(output.reference(0));
+	    }
+	    
+	    
+	    model.nodeRemoved(treeNode.parent(), index, treeNode);
+	    
+	}
 	model.updateLevel1Nodes();
 	
 	return true;
@@ -3532,6 +3561,7 @@ public class ConfigurationTreeActions
      * */
     public static boolean removePathFromDataset(JTree tree, String datasetName)
     {
+
 	ConfigurationTreeModel model  = (ConfigurationTreeModel)tree.getModel();
 	Configuration          config = (Configuration)model.getRoot();
 	TreePath               treePath = tree.getSelectionPath();
